<resources>
    <string name="app_name">Nuestra Boda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Nuestra Invitación</string>
    <string name="menu_gallery">Galería</string>
    <string name="mesa_regalos">Mesa de regalos</string>
    <string name="menu_location">Ubicación</string>
    <string name="menu_recomendation">Toma Nota</string>

    <string name="days_title">Días</string>
    <string name="hours_title">Horas</string>
    <string name="min_title">Minutos</string>
    <string name="seg_title">Segundos</string>
    <string name="title_weading">Nuestra Boda</string>
    <string name="faltan_weading">Faltan</string>
    <string name="date_weading">04 / 06 / 2022</string>
    <string name="ours_title">Zaira &amp; Alejandro</string>
    <string name="inv_title">¡Estás invitado!</string>
    <string name="za">Z &amp; A</string>
    <string name="we_want_title">Queremos que seas parte de este momento tan importante para nosotros.</string>
    <string name="direccion">Tulio Estrada #125, Colonia Campo Sotelo. Temixco Morelos</string>
    <string name="bless_papas">Con la Bendición de nuestros Padres:</string>
    <string name="padrinos">Nuestros padrinos:</string>
    <string name="padrinos_name">Zeida Diaz &amp; Juan Manuel Álvarez</string>
    <string name="zai_papas">Ma. Elena Villanueva &amp; Abraham Diaz</string>
    <string name="ale_papas">Artemisa Rodarte &amp; Vicente Gómez</string>
    <string name="y_papas">Y</string>
    <string name="message_a">¡Atención, atención! Es importante tomes en cuenta cada punto.</string>
    <string name="message_b">*Después de la ceremonia no te muevas tanto ya que ahí mismo será el ¡pachangón!</string>
    <string name="message_c">*No olvides llevar repelente por si los moscos quieren atacarte.</string>
    <string name="message_d">*Queremos que te diviertas, por eso decidimos:</string>
    <string name="message_d_">No invitar niños.</string>
    <string name="message_e">*Recuerda seguir con los protocolos COVID.</string>
    <string name="message_f">*Agradecemos confirmes tu asistencia a más tardar el 4 de mayo 2022 a los números de:</string>
    <string name="message_g">Zaira <u>5559093466</u></string>
    <string name="message_h">Alejandro <u>5611259511</u></string>
    <string name="message_dress_c">DressCode</string>
    <string name="message_dress_">Vestimenta FORMAL</string>
    <string name="mesa_regalos_">Nuestra mesa de regalos</string>
    <string name="mesa"><u>#50747720</u></string>
    <string name="msj_">¡Agradeceremos todas tus muestras de cariño!</string>
</resources>