<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_invitation"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recomendation"
            android:icon="@drawable/ic_recomendation"
            android:title="@string/menu_recomendation" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_card_giftcard_24"
            android:title="@string/mesa_regalos" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/menu_location" />

    </group>
</menu>