<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_image_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:scaleType="centerCrop"
            android:src="@drawable/wedding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/overlay_image"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:background="#6F000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nosotros_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/willpower"
            android:text="@string/ours_title"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <TextView
            android:id="@+id/our_weading_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/good_vibrations"
            android:text="@string/title_weading"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nosotros_tv" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/shettricka"
            android:text="@string/date_weading"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/our_weading_home" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_image_cl">

        <TextView
            android:id="@+id/faltan_title_tv"
            style="@style/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faltan_weading"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/count_cl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faltan_title_tv">

            <RelativeLayout
                android:id="@+id/back_day"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_shape_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/day_count_tv"
                    style="@style/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    tools:text="112" />
            </RelativeLayout>


            <TextView
                android:id="@+id/dots_a_tv"
                style="@style/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                app:layout_constraintBottom_toBottomOf="@id/back_day"
                app:layout_constraintStart_toEndOf="@id/back_day"
                app:layout_constraintTop_toTopOf="@id/back_day" />

            <RelativeLayout
                android:id="@+id/back_hour"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_shape_back"
                app:layout_constraintStart_toEndOf="@id/dots_a_tv"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/hour_count_tv"
                    style="@style/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    tools:text="11" />
            </RelativeLayout>

            <TextView
                android:id="@+id/dots_b_tv"
                style="@style/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                app:layout_constraintBottom_toBottomOf="@id/back_hour"
                app:layout_constraintStart_toEndOf="@id/back_hour"
                app:layout_constraintTop_toTopOf="@id/back_hour" />

            <RelativeLayout
                android:id="@+id/back_minute"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_shape_back"
                app:layout_constraintStart_toEndOf="@id/dots_b_tv"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/minutes_count_tv"
                    style="@style/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    tools:text="11" />
            </RelativeLayout>

            <TextView
                android:id="@+id/dots_c_tv"
                style="@style/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                app:layout_constraintBottom_toBottomOf="@id/back_minute"
                app:layout_constraintStart_toEndOf="@id/back_minute"
                app:layout_constraintTop_toTopOf="@id/back_minute" />

            <RelativeLayout
                android:id="@+id/back_seconds"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/circle_shape_back"
                app:layout_constraintStart_toEndOf="@id/dots_c_tv"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/seconds_count_tv"
                    style="@style/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    tools:text="11" />
            </RelativeLayout>

            <TextView
                android:id="@+id/day_title_tv"
                style="@style/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_title"
                app:layout_constraintEnd_toEndOf="@+id/back_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_day" />

            <TextView
                android:id="@+id/hour_title_tv"
                style="@style/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours_title"
                app:layout_constraintEnd_toEndOf="@+id/back_hour"
                app:layout_constraintStart_toStartOf="@+id/back_hour"
                app:layout_constraintTop_toBottomOf="@id/back_hour" />

            <TextView
                android:id="@+id/minutes_title_tv"
                style="@style/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_title"
                app:layout_constraintEnd_toEndOf="@+id/back_minute"
                app:layout_constraintStart_toStartOf="@+id/back_minute"
                app:layout_constraintTop_toBottomOf="@id/back_minute" />

            <TextView
                android:id="@+id/seg_title_tv"
                style="@style/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seg_title"
                app:layout_constraintEnd_toEndOf="@+id/back_seconds"
                app:layout_constraintStart_toStartOf="@+id/back_seconds"
                app:layout_constraintTop_toBottomOf="@id/back_seconds" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/estas_inv_tv"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inv_title"
        android:textSize="45sp"
        android:fontFamily="@font/shettricka"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_cl" />
    <TextView
        android:id="@+id/we_want_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_want_title"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/comfortaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estas_inv_tv" />


    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
